finished html mockup and started working on javascript intergration

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <div class="container">
             <div class="card" id="mainContainer">
-                <!-- <button class="show" id="start-button">Start Quiz</button> -->
+                <button class="btn" id="start-button">Start Quiz</button>
                 <!--  -->
-                <header>Question...</header>
+                <!-- <header>Question...</header> -->
 
-                <ul id="parentList">
+                <!-- <ul id="parentList">
                     <li>
                         <input class="checkbox" id="o1" type="checkbox" />
                         <label for="agreement">I agree to share my e-mail address with The CSS Blog</label>
@@ -41,7 +41,8 @@
                     </li>
                 </ul>
                 <button id="submitBtn">Submit</button>
-                <button class="rightSide" id="resetBtn">Restart</button>
+                <button class="rightSide" id="resetBtn">Restart</button> -->
+
             </div>
         </div>
 
